workload/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-server
  namespace: common
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      nodeSelector:
        kubernetes.io/hostname: haziq-homelab
      securityContext:
        fsGroup: 1000
      containers:
        - name: stirling-pdf
          image: stirlingtools/stirling-pdf:latest-fat
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "3Gi"
              cpu: "1000m"
          volumeMounts:
            - name: data
              mountPath: /usr/share/tessdata
              subPath: tessdata
            - name: data
              mountPath: /configs
              subPath: configs
            - name: data
              mountPath: /logs
              subPath: logs
            - name: data
              mountPath: /customFiles
              subPath: customFiles
            - name: data
              mountPath: /pipeline
              subPath: pipeline
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: stirling-pdf
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: common
spec:
  selector:
    app: stirling-pdf
  ports:
    - port: 8080
      targetPort: http
